--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "description": "Bitfocus Companion module to control Sony 9-pin (RS-422) VTR devices using MediaNerd.RS422VTR library",
+  "homepage": "https://github.com/MediaNerdStudio/companion-module-sony9pin-vtr-control",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MediaNerdStudio/companion-module-sony9pin-vtr-control"
+  },
   "main": "index.js",
   "type": "module",
   "engines": {
