--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@medianerd/companion-module-sony9pin-vtr-control",
   "displayName": "Companion sony9pin VTR Control",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "description": "Bitfocus Companion module to control Sony 9-pin (RS-422) VTR devices using MediaNerd.RS422VTR library",
   "homepage": "https://github.com/MediaNerdStudio/companion-module-sony9pin-vtr-control",
@@ -14,7 +14,13 @@
   "engines": {
     "node": ">=18"
   },
-  "keywords": ["companion", "bitfocus", "sony9pin", "rs422", "vtr"],
+  "keywords": [
+    "companion",
+    "bitfocus",
+    "sony9pin",
+    "rs422",
+    "vtr"
+  ],
   "author": "MediaNerd",
   "license": "MIT",
   "dependencies": {
