--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   "license": "MIT",
   "dependencies": {
     "@companion-module/base": "^1.7.0",
-    "sony9pin-nodejs": "latest"
+    "sony9pin-nodejs": "0.3.1"
   }
 }
