--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -2,7 +2,7 @@
   "id": "medianerd-sony9pin-vtr",
   "name": "Companion sony9pin VTR Control",
   "shortname": "sony9pin-vtr",
-  "version": "0.2.9",
+  "version": "0.2.10",
   "description": "Control Sony 9-pin (RS-422) VTR devices and Blackmagic AMP over RS-422.",
   "author": "MediaNerd",
   "license": "MIT",
@@ -12,13 +12,10 @@
   "maintainers": [
     { "name": "MediaNerd" }
   ],
-  "keywords": ["companion", "sony9pin", "rs422", "vtr", "blackmagic", "amp"],
+  "keywords": ["companion", "sony9pin", "rs422", "vtr", "blackmagic", "amp", "odetics", "evs", "lsm"],
   "manufacturer": "Sony",
   "products": [
-    "9-pin VTR Control",
-    "Blackmagic AMP Control",
-    "Odetics Control",
-    "EVS LSM (Odetics) Control"
+    "VTR Control"
   ],
   "legacyIds": [],
   "runtime": {
