--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@medianerd/companion-module-sony9pin-vtr-control",
-  "displayName": "Companion sony9pin VTR Control",
+  "name": "@medianerd/generic-vtrcontrol",
+  "displayName": "Generic VTR Control",
   "version": "0.2.10",
   "private": true,
-  "description": "Bitfocus Companion module to control Sony 9-pin (RS-422) VTR devices using MediaNerd.RS422VTR library",
-  "homepage": "https://github.com/MediaNerdStudio/companion-module-sony9pin-vtr-control",
+  "description": "Bitfocus Companion module to control VTR devices and Blackmagic AMP over RS-422.",
+  "homepage": "https://github.com/MediaNerdStudio/generic-vtrcontrol",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MediaNerdStudio/companion-module-sony9pin-vtr-control"
+    "url": "https://github.com/MediaNerdStudio/generic-vtrcontrol"
   },
   "main": "index.js",
   "type": "module",
@@ -17,9 +17,14 @@
   "keywords": [
     "companion",
     "bitfocus",
-    "sony9pin",
     "rs422",
-    "vtr"
+    "vtr",
+    "blackmagic",
+    "amp",
+    "bvw75",
+    "odetics",
+    "evs",
+    "lsm"
   ],
   "author": "MediaNerd",
   "license": "MIT",
